After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707338 - UOA: Fix build failure
UOA: Fix build failure
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: UOA
unspecified
Other All
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-03 01:53 UTC by darkxst
Modified: 2013-09-03 12:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
UOA: Fix build failure (1.92 KB, patch)
2013-09-03 01:53 UTC, darkxst
committed Details | Review

Description darkxst 2013-09-03 01:53:25 UTC
This was a regression caused by c689cd6a91cb2a31ce0d03f47e59ca4e3f368e9c
Comment 1 darkxst 2013-09-03 01:53:27 UTC
Created attachment 253916 [details] [review]
UOA: Fix build failure
Comment 2 Guillaume Desmottes 2013-09-03 12:18:55 UTC
Attachment 253916 [details] pushed as 00fe630 - UOA: Fix build failure