UOA: Fix build failure

This was a regression caused by c689cd6a91cb2a31ce0d03f47e59ca4e3f368e9c

https://bugzilla.gnome.org/show_bug.cgi?id=707338